# CVG-Tietronix

./: .gitignore  CarouselStudy.json  HMDOpView.sln  Makefile  RAWINSTALL.sh  README.md  Session.toml  StartWBluetooth.sh  create_version_src.py  environment.yml  expect_connect.sh  pyproject.toml  setup.cfg  setup.py
DNH/: .gitignore  CVG_DNHBackbone.sln  CoreDependencies._props  Dashboard.sln  HMDOpView.sln  Makefile  README.md  README_Dashboard.md  README_HMDOpView.md  VidYUVLumaTester.sln  config.json  cvgclearsession.sh  cvgserverboot.sh  paths.py
DNH/CVGDNH/: CVG_DNH.vcxproj  CVG_DNH.vcxproj.filters  Makefile
DNH/CVGData/: CVGData.vcxproj  CVGData.vcxproj.filters  Makefile
DNH/CVG_DNHBackbone/: CVG_DNHBackbone.vcxproj  DevDependencies.props
DNH/Dashboard/: .gitignore  App.cpp  App.h  CVGBridge.h  CVGDashBoard.h  CVGDashBoard.rc  CVGDashBoard.vcxproj  CVGDashBoard.vcxproj.filters  CamChannel.cpp  CamChannel.h  DashDragCont.cpp  DashDragCont.h  Dashboard._props  DashboardCam.cpp  DashboardCam.h  DashboardCamInst.cpp  DashboardCamInst.h  DashboardCamInstUI.cpp  DashboardCamInstUI.h  DashboardElement.cpp  DashboardElement.h  DashboardElementInst.cpp  DashboardElementInst.h  DashboardGrid.cpp  DashboardGrid.h  DashboardGridInst.cpp  DashboardGridInst.h  DashboardInst.cpp  DashboardInst.h  DashboardTile.cpp  (+25 more)
LICENSES/: CYOK_LICENSE
SpydevExample/: Makefile  Resources.md  main.cpp
_DesignAndDocs/: WHATSINHERE.md
_Specifications/: AppOptionsDocument.docx  SessionDocument.docx  WHATSINHERE.md
_SrcAssets/: WHATSINHERE.md
_TechDocAssets/: .gitignore  README.md  WHATSINHERE.md  locate_plantuml._sh  uml_act_camera_polling.plantuml  uml_packages.plantuml  uml_seq_take_snapshot.plantuml  uml_seq_toggling_video_capture.plantuml
cancer-goggles/: dearpygui_test.py  meta_dialog.py  models.py  parameter_dialog.py  parameter_item.py  parameters.py  start.py  utils.py  views.py
demos/: writer_testy.py
goggles/: __init__.py  __main__.py  dearpygui_testy.py  meta_dialog.py  models.py  parameter_dialog.py  start.py  utils.py  views.py
src/: AppVersionDicom.cpp  AppVersionDicom.h  FontMgr.cpp  FontMgr.h  GLWin.cpp  GLWin.h  HMDOpApp.cpp  HMDOpApp.h  HMDOpView.aps  HMDOpView.vcxproj  HMDOpView.vcxproj.filters  LoadAnim.cpp  MainWin.cpp  MainWin.h  OpSession.cpp  OpSession.h  Resource.h  Session_Toml.cpp  Session_Toml.h  TexObj.cpp  __init__.py  __main__.py  conftest.py  dearpygui_testy.py  meta_dialog.py  models.py  parameter_dialog.py  parameter_item.py  utils.py  video_panel.py  video_player.py  views.py
tests/: conftest.py  test_fpga.py
(+519 files in other folders)
