[metadata]
name = cancer-goggles
description = Placeholder
long_description = file: README.md
long_description_content_type = text/markdown
author = Achilefu-Lab

[options]
packages = find:
install_requires =
    opencv-python
    pyside6
python_requires = >=3.8.0
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest

[build_ext]
inplace = True