[metadata]
name = cancer-goggles
version = 0.0.1.dev
description = Placeholder
long_description = file: README.md
long_description_content_type = text/markdown
author = Achilefu-Lab

[options]
packages = find:
install_requires =
    pyqt5 == 5.15.4
    opencv-python
python_requires = >=3.8.0
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest

[options.entry_points]
console_scripts =
    goggles = src:start_gui

[build_ext]
inplace = True